--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -1,5 +1,5 @@
 @BOOK{Staud2006,
-	author= {Staud, Josef},
+	author= {Staud, J.},
 	title= {Geschäftsprozessanalyse: Ereignisgesteuerte Prozessketten und objektorientierte 			  Geschäftsprozessmodellierung für betriebswirtschaftliche Standardsoftware},
 	year= {2006},
 	tags= {Pattern; Software Engineering},
@@ -7,7 +7,7 @@
 }
 
 @BOOK{koch2011,
-	author= {Koch, Susanne},
+	author= {Koch, S.},
 	title= {Einführung in das Management von Geschäftsprozessen},
 	year= {2011},
 	tags= {Pattern; Software Engineering},
@@ -15,7 +15,7 @@
 	}
 
 @BOOK{Stoerrle2005,
-	author = {St{\"o}rrle, Harald},
+	author = {St{\"o}rrle, H.},
 	title = {UML 2 f\"ur Studenten},
 	year = {2005},
 	tags= {Pattern; Software Engineering},
@@ -23,7 +23,7 @@
 	}
 
 @BOOK{Mishra2012,
-	author = {Mishra, Jibitesh and Mohanty, Ashok},
+	author = {Mishra, J. and Mohanty, A.},
 	title = {Software Engineering},
 	year = {2012},
 	tags= {Pattern; Software Engineering},
@@ -32,7 +32,7 @@
 }
 
 @BOOK{Koelmel2000,
-	author = {Kölmel, Bernhard},
+	author = {Kölmel, B.},
 	title = {Softwareprozessverbesserungsprojekte},
 	year = {2000},
 	tags= {Pattern; Software Engineering},
@@ -49,7 +49,7 @@
 	}
 
 @BOOK{Specker1998,
-	author = {Specker, Adrian},
+	author = {Specker, A.},
 	title = {Kognitives Software Engineering},
 	year = {1998},
 	tags= {Pattern; Software Engineering},
@@ -57,7 +57,7 @@
 	}
 
 @BOOK{Booch1993,
-	author = {Doug, Bryan  and Booch, Grady},
+	author = {Doug, B.  and Booch, G.},
 	title = {Software Engineering with ADA},
 	year = {1993},
 	tags= {Pattern; Software Engineering},
@@ -65,7 +65,7 @@
 	}
 		
 @article{ross1975software,
-  	  author={Ross, Douglas T and Goodenough, John B and Irvine, CA},
+  	  author={Ross, D. T. and Goodenough, J. B. and Irvine, C.A.},
 	  title={Software engineering: process, principles, and goals},
 	   year={1975},
 	  journal={Computer},
@@ -78,7 +78,7 @@
 
 
 @BOOK{Hanser2010,
-	author = {Hanser, Eckhart},
+	author = {Hanser, E.},
 	title = {Agile Prozesse},
 	year = {2010},
 	tags= {Pattern; Software Engineering},
@@ -86,19 +86,16 @@
 }
 	
 @article{Hesse2008,
-	author={Hesse, Wolfgang and Mayr, Heinrich C.},
+	author={Hesse, W. and Mayr, H. C.},
 	title={Modellierung in der Softwaretechnik: eine Bestandsaufnahme},
-	year={2008},
 	journal={Informatik-Spektrum},
-	volume={31},
-	number={5},
-	pages={377-393},
+	volume={31 (5) : 377-393, 2008},
 	 tags= {Pattern; Software Engineering}
 	 	}
 
 
 @BOOK{Grechenig2010,
-	author = {Grechenig, Thomas  and Bernhart, Mario and Breiteneder, Roland and Kappel, Karin},
+	author = {Grechenig, T.  and Bernhart, M. and Breiteneder, R. and Kappel, K.},
 	title = {Softwaretechnik},
 	year = {2010},
 	 tags= {Pattern; Software Engineering},
@@ -107,7 +104,7 @@
 	
 
 @BOOK{Boehm81,
-  author = {Barry W. Boehm},
+  author = {Boehm, B. W.},
   title = {Software Engineering Economics},
   publisher = {Prentice Hall},
   year = {1981},
@@ -115,7 +112,7 @@
 }
 
 @BOOK{Schwaber2004,
-	author = {Schwaber, Ken},
+	author = {Schwaber, K.},
 	title = {Agile Project Management with Scrum},
 	year = {2004},
 	 tags= {Pattern; Software Engineering},
@@ -123,7 +120,7 @@
 	}
 
 @book {Henning2011,
-	author = {Wolf, Henning},
+	author = {Wolf, H.},
 	title = {Die Kraft von Scrum: eine inspirierende Geschichte über einen revolutionären 
 		 Projektmanagementansatz},
 	year = {2011},
@@ -132,7 +129,7 @@
 }
 
 @book {Pries2011,
-	author = {Pries, Kim H. and Quigley, Jon M.},
+	author = {Pries, K. H. and Quigley, J. M.},
 	title = {Scrum project management},
 	year = {2011},
 	 tags= {Pattern; Software Engineering},
@@ -140,7 +137,7 @@
 }
 
 @book {Lacey2012,
-	author = {Lacey, Mitch},
+	author = {Lacey, M.},
 	title = {The Scrum field guide: practical advice for your first year},
 	year = {2012},
 	tags= {Pattern; Software Engineering},
@@ -148,7 +145,7 @@
 }
 
 @book {Keith2010,
-	author = {Keith, Clinton},
+	author = {Keith, C.},
 	title = {Agile game development with Scrum: Description based on print version record},
 	year = {2010},
 	tags= {Pattern; Software Engineering},
@@ -156,7 +153,7 @@
 	}
 
 @book {Pichler2010,
-	author = {Pichler, Roman},
+	author = {Pichler, R.},
 	title = {Agile product management with Scrum: creating products that customers love. - 
 	Description based on print version record},
 	year = {2010},
@@ -165,7 +162,7 @@
 	}
 
 @book {Schwaber2007,
-	author = {Schwaber, Ken},
+	author = {Schwaber, K.},
 	title = {The enterprise and Scrum},
 	year = {2007},
 	tags= {Pattern; Software Engineering},
@@ -173,7 +170,7 @@
 }
 
 @book {Wolf2011,
-	author = {Wolf, Henning},
+	author = {Wolf, H.},
 	title = {Die Kraft von Scrum: eine inspirierende Geschichte über einen revolutionären 
 	Projektmanagementansatz},
 	year = {2011},
@@ -182,7 +179,7 @@
 }
 
 @book {Pham2012,
-	author = {Pham, Andrew},
+	author = {Pham, A.},
 	title = {Scrum in action: agile software project management and development},
 	year = {2012},
 	tags= {Pattern; Software Engineering},
@@ -194,7 +191,7 @@
 
 
 @article{Takeuchi1986,
-	  author = {Takeuchi, Hirotaka and Nonaka, Ikujiro},
+	  author = {Takeuchi, H. and Nonaka, I.},
 	    title = {The New New Product Development Game},
   	  journal = {Harvard Business Review},
 	  	volume={86},
@@ -208,13 +205,13 @@
     publisher = "Mountain Goat Software", 
     title = "Scrum Overview", 
     url = "http://epf.eclipse.org/wikis/scrum/",
-    note = "Version: 08.Dezember 2014"
+    note = "Letzter Zugriff: 08.12.2014"
 
     
   }
   
   @book{Friedrich2008,
-    author={Friedrich,Jan  and Hammerschall,Ulrike  and Kuhrmann, Marco  and Sihling, Marc},
+    author={Friedrich,J. and Hammerschall,U.  and Kuhrmann, M.  and Sihling, M.},
   title={Das V-Modell XT},
   year={2008},
   tags= {Pattern; Software Engineering},
@@ -222,7 +219,7 @@
   }
 
 @inproceedings{Kuhrmann2011,
-	  author = {Kuhrmann, Marco and Lange, Christian and Schnackenburg, André},
+	  author = {Kuhrmann, M. and Lange, C. and Schnackenburg, A.},
   	  booktitle = {EuroSPI},
  	  pages = {49-60},
 	  year={2011},
@@ -231,7 +228,7 @@
 	  }
 	  
  @book{Zoerner2012,
-   author={Zörner, Stefan},
+   author={Zörner, S.},
   title={Software-Architekturen Dokumentieren und Kommunizieren},
   year={2012},
   tags= {Pattern; Software Engineering},
@@ -241,7 +238,7 @@
 
 @inproceedings{pfahl2007software,
   title={Software Process Dynamics and Agility},
-  author={Pfahl, D and Raffo, David M},
+  author={Pfahl, D. and Raffo, D. M.},
   title     = {Software Process Dynamics and Agility, International Conference
                on Software Process, ICSP 2007, Minneapolis, MN, USA, May
                19-20, 2007, Proceedings},
@@ -253,17 +250,17 @@
 
 }
 
-@article{hauber2010,pages={1--23},
-  author={Hauber, Rudolf and Muth, Bertil},
+@article{hauber2010,
+ pages={1--23, 2010},
+  author={Hauber, R. and Muth, B.},
   title={Architekturprozesse--Systeme systematisch entwickeln},
   journal={URL: www. sigs-datacom. de},
-  year={2010},
-    tags= {Pattern; Software Engineering}
+   tags= {Pattern; Software Engineering}
 }
 
 @article{gau2006,
  	 title={UMA und EPF: Einf{\"u}hrung und Anwendung in der Praxis},
-  	author={Gau, Thosten},
+  	author={Gau, T.},
  	 journal={Objekt Spektrum,(November/Dezember 2006-6)},
 	 tags= {Pattern; Software Engineering},
 	   year={2006},
@@ -277,27 +274,25 @@
     title = "Open Unified Process (OpenUP)", 
       tags= {Pattern; Software Engineering},
     url = "http://www.itpractices.org/Live/framework/openup",
-   note = "Version: 08.Dezember 2014"
+   note = "Letzter Zugriff: 08.12.2014"
     
   }
   
   @article{freudenreichevaluierung,
-    author={Freudenreich, Robert},
+    author={Freudenreich, R.},
   title={Evaluierung der Potentiale des Eclipse Process Frameworks},
   journal={Modellbasierte Softwareentwicklung},
    tags= {Pattern; Software Engineering},
-  pages={34},
-  year={2009}
+  pages={34, 2009}
+ 
 }
 
 @misc{eclipseopenup, 
-    author = "{Balduino, Ricardo }", 
+    author = "{Balduino, R.}", 
     title = "Introduction to OpenUP (Open Unified Process) ", 
     publisher = "Eclipse", 
-    month="August",
-    year = "2007", 
     url = "http://www.eclipse.org/epf/general/OpenUP.pdf",
-    note = "Version: 08.Dezember 2014"
+    note = "Letzter Zugriff: 08.12.2014"
 
     
   }
@@ -306,12 +301,12 @@
   author = {IBM CORP},
   title = {OpenUP Process Version 1.5.0.4},
   url = {http://epf.eclipse.org/wikis/openup/},
-   note = "Version: 08.Dezember 2014"
+   note = "Letzter Zugriff: 08.12. 2014"
  
 }
 
 @book{Basem2010,
- author={El-Haik, Basem  and Shaout, Adnan },
+ author={El-Haik, B.  and Shaout, A.},
  title={Software Design For Six Sigma: A Roadmap For Excellence},
  year={2010},
  publisher={Wiley}
@@ -328,13 +323,12 @@
   author = {Beratungsstelle der Bundesregierung für Informationstechnik in der Bundesverwaltung},
     title = {V-Modell XT},
   editor = {Deutschland, Bundesrepublik},
-  timestamp = {2010-04-21T10:53:42.000+0200},
   url = {http://ftp.uni-kl.de/pub/v-modell-xt/Release-1.2/Dokumentation/pdf/V-Modell-XT-Teil1.pdf},
-  year = 2004
+   note = "Letzter Zugriff: 08.12.2014"
 }
 
 @book{reinhard2008,
-  author={H{\"o}hn, Reinhard  and Rausch, A.  and Broy, M.  and  H{\"o}ppner, Stephan and Bergner, K.  and Petrasch, R. and Biffl, S. and Wagner, R. and Hesse, W.},
+  author={H{\"o}hn, R.  and Rausch, A.  and Broy, M.  and  H{\"o}ppner, S. and Bergner, K.  and Petrasch, R. and Biffl, S. and Wagner, R. and Hesse, W.},
   title={Das V-Modell XT: Grundlagen, Methodik und Anwendungen},
   year={2008},
   publisher={Springer}
@@ -355,7 +349,7 @@
 }
 
 @book {Reichert2011,
-author = {Kaiser, Stefanie and Reichert, Manfred},
+author = {Kaiser, S. and Reichert, M.},
 title = {Datenflussvarianten in Prozessmodellen: Szenarien, Herausforderungen, Ansätze},
 year = {2011},
 publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Informatik},
@@ -365,7 +359,7 @@ address = {Ulm}
 
 
 @inproceedings{kaschek1998,
-  author={Kaschek, Roland},
+  author={Kaschek, R.},
   booktitle= {Modellierung '98, Proceedings des GI-Workshops in M{\"{u}}nster, 11.-13. M{\"{a}}rz 1998},
   title={Proze{\ss}ontologie als Faktor der Gesch{\"a}ftsproze{\ss}modellierung.},
   booktitle={Modellierung},
@@ -374,13 +368,10 @@ address = {Ulm}
 }
 
 @article{journals95,
-  author = {Becker, Jörg and Rosemann, Michael and Schütte, Reinhard},
+  author = {Becker, J. and Rosemann, M. and Schütte, R.},
     title = {Grundsätze ordnungsmäßiger Modellierung.},
    journal = {Wirtschaftsinformatik},
-  number = 5,
-    year = {1995},
-  pages = {435--445},
-  volume = 37,
+  volume = {37 (5): 435--445, 1995}
 }
 
 @book{freund2007,
@@ -405,7 +396,7 @@ address = {Ulm}
 }
 
 @inproceedings{pichler2012,
- author={Pichler, Paul and Weber, Barbara and Zugal, Stefan and Pinggera, Jakob and Mendling, Jan and Reijers, Hajo A},
+ author={Pichler, P. and Weber, B. and Zugal, S. and Pinggera, J. and Mendling, J. and Reijers, H. A.},
   title={Imperative versus declarative process modeling languages: An empirical investigation},
   booktitle={Business Process Management Workshops, LNBIP 99,},
   pages={383--394},
@@ -429,7 +420,7 @@ address = {Ulm}
 }
 
 @book{thomas2009,
-  author={Thomas, Oliver},
+  author={Thomas, O.},
   title={Fuzzy Process Engineering },
   year={2009},
   publisher={Gabler Verlag}
@@ -473,7 +464,7 @@ address = {Ulm}
 
 @article{white2004introduction,
   title={Introduction to BPMN},
-  author={White, Stephen A},
+  author={White, S. A.},
   journal={IBM Cooperation},
   volume={2},
   number={0},
@@ -486,12 +477,12 @@ address = {Ulm}
     title = "BPMN Offensive Berlin", 
     publisher = "Mountain Goat Software", 
     url = "http://www.bpmb.de/index.php/BPMNPoster",
-   note = "Version: 08.Dezember 2014"
+   note = "Letzter Zugriff: 08.12.2014"
     
   }
   
   @book{reichert2012,
-    author={Reichert, Manfred  and Weber, Barbara},
+    author={Reichert, M.  and Weber, B.},
   title={Enabling Flexibility in Process-Aware Information Systems: Challenges, Methods, Technologies},
   year={2012},
   publisher={Springer}
@@ -500,34 +491,32 @@ address = {Ulm}
 
 
 @inproceedings{pesic2007declare,
-  author={Pesic, Maja and Schonenberg, Helen and van der Aalst, Wil MP},
+  author={Pesic, M. and Schonenberg, H. and van der Aalst, W.M.P.},
   title={Declare: Full support for loosely-structured processes},
   booktitle={11th IEEE International Enterprise Distributed Object Computing Conference, 2007.},
   pages={287--287}
 }
 
 @inproceedings{fahland2010,
-  author={Fahland, Dirk and Mendling, Jan and Reijers, Hajo A and Weber, Barbara and Weidlich, Matthias and Zugal, Stefan},
+  author={Fahland, D. and Mendling, J. and Reijers, H. A. and Weber, B. and Weidlich, M. and Zugal, S.},
   title={Declarative versus imperative process modeling languages: the issue of maintainability},
-  booktitle={Business Process Management Workshops, LNBIP},
+  booktitle={Business Process Management Workshops, LNBIP, Vol. 43},
   pages={477--488},
   year={2010},
   publisher={Springer}
 }
 
 @inproceedings{pesic2006,
-  author={Pesic, Maja and van der Aalst, Wil MP},
+  author={Pesic, M. and van der Aalst, W.M.P.},
   title={A declarative approach for flexible business processes management},
-  number =  {4103},
-series={Lecture Notes in Computer Science},  
-  booktitle={Business Process Management Workshops},
+  booktitle={Business Process Management Workshops, Lecture Notes in Computer Science 4103},
   pages={169--180},
   year={2006},
   publisher={Springer}
 }
 
 @book{montali2010,
-  author={Montali, Marco},
+  author={Montali, M.},
   title={Specification and verification of declarative open interaction models: A logic-based approach},
   year={2010},
   publisher={Springer}
@@ -536,23 +525,19 @@ series={Lecture Notes in Computer Science},
 @incollection{Pesic200,
 author={Aalst, W.M.P. and Pesic, M.},
 booktitle={Web Services and Formal Methods},
-number =  {06291},
-series={Lecture Notes in Computer Science},
 title={DecSerFlow: Towards a Truly Declarative Service Flow Language},
-year={2006},
-publisher={Springer Berlin Heidelberg},
-pages={1-23}
+year={Lecture Notes in Computer Science, Vol. 6291, S. 1-26,  2006},
+publisher={Springer Berlin Heidelberg}
 }
 
 @article{quteprints,
-      author = {Mendling, Jan  and Recker, Jan C.  and Wolf, Johannes },
+      author = {Mendling, J.  and Recker, J. C.  and Wolf, J.},
            title = {Collaboration features in current BPM tools},
           volume = {32},
           number = {1},
        publisher = {Gesellschaft f{\''u}r Informatik e.V.},
-            year = {2012},
          journal = {EMISA Forum},
-           pages = {48--65}
+           pages = {48--65, 2012}
 }
 
 @book{becker2012prozessmanagement,
@@ -570,7 +555,7 @@ pages={1-23}
 }
 
 @inproceedings{list2006evaluation,
-  author={List, Beate and Korherr, Birgit},
+  author={List, B. and Korherr, B.},
   title={An evaluation of conceptual business process modelling languages},
   booktitle={Proceedings of the 2006 ACM symposium on applied computing},
   pages={1532--1539},
@@ -582,21 +567,18 @@ pages={1-23}
     publisher = "Eclipse", 
     title = "Eclipse Scrum Library", 
     url = "http://www.eclipse.org/epf/downloads/praclib/praclib_downloads.php",
-   note = "Version: 08.Dezember 2014"
+   note = "Letzter Zugriff: 08.12. 2014"
     
   }
   
   @inproceedings{bpm07,
   author = {Mendling, J. and Reijers, H.A. and Cardoso, J.},
     title = {What Makes Process Models Understandable?},
-    number =  {4714},
-series={Lecture Notes in Computer Science},  
-  booktitle = {International Conference on Business Process Management (BPM 2007)},
+  booktitle = {International Conference on Business Process Management (BPM 2007), Lecture Notes in Computer Science 4714, 2007},
   editor = {Alonso, G. and Dadam, P. and Rosemann, M.},
    pages = {48--63},
-  publisher = {Springer-Verlag, Berlin},
-  series = {Lecture Notes in Computer Science}
-  }
+  publisher = {Springer-Verlag, Berlin}
+    }
 
 
 
@@ -604,41 +586,38 @@ series={Lecture Notes in Computer Science},
 
 
 @article{sabrina942,
-          author = {Zugal,Stefan and Soffer, Pnina and Haisjackl, Cornelia and Pinggera, Jakob  and 				Reichert, Manfred and Weber, Barbara},
+          author = {Zugal,S. and Soffer, P. and Haisjackl, C. and Pinggera, J.  and 	Reichert, M. and Weber, B.},
            title = {Investigating expressiveness and understandability of hierarchy in declarative business process models},
-            year = {2013},
-           journal = {Software \& Systems Modeling},
-           pages={1--23}
-           }
+           journal = {Software \& Systems Modeling: 1--23, 2013, DOI 10.1007/s10270-013-0356-2}
+                      }
 
 @phdthesis{Menhorn2014,
   TYPE = {Bachelorarbeit},
-author={Menhorn, Nicole},
+author={Menhorn, N.},
 title={Analyse und Überführung von Softwareentwicklungsprozessen in die standardisierte BPMN Notation},
 year={2014},
 school={Universität Ulm}}
 
 
 @phdthesis{brunner2007fallstudie,
-  author={Brunner, Maximilian},
+  author={Brunner, M.},
   title={Fallstudie zur Modellierung von Software-Entwicklungsprozessen auf Basis des Software Process Engineering Metamodel 2.0},
   year={2007},
   school={Diplomarbeit, Lehrstuhl f{\"u}r Informatik 2, FAU}
 }
 
 @INPROCEEDINGS{software,
-AUTHOR = "Andre L. N. Campos and Toacy Cavalcante de Oliveira",
+AUTHOR = "Campos, A.L.N.  and Cavalcante de Oliveira, T.",
 TITLE = "Software Processes with BPMN: An Empirical Analysis",
 BOOKTITLE = "PROFES'13",
-PAGES = {338-341},
-YEAR = {2013}
+PAGES = {338-341, 2013}
 }
 
 @misc{Bregenzer2014,
-author={Bregenzer, Stefan},
+author={Bregenzer, S.},
 title={Projektdurchführungstrategie als strategisches Prozessmodell in BPMN},
 url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-strategisches- prozessmodell-in-bpmn/},
-   note = "Version: 08.Dezember 2014"
+   note = "Letzter Zugriff: 08.12.2014"
  }
 
 
@@ -651,59 +630,48 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-stra
 }
 
 @inproceedings{gruhn2006complexity,
-  author={Gruhn, Volker and Laue, Ralf},
+  author={Gruhn, V. and Laue, R.},
   title={Complexity metrics for business process models},
-  booktitle={9th international conference on business information systems},
-  pages={1--12},
-  year={2006}
-}
+  booktitle={9th International Conference on Business Information Systems},
+  pages={1--12, 2006}
+  }
 
 @article{haisjackl2014understanding,
-  author={Haisjackl, Cornelia and Barba, Irene and Zugal, Stefan and Soffer, Pnina and Hadar, Irit and Reichert, Manfred and Pinggera, Jakob and Weber, Barbara},
+  author={Haisjackl, C. and Barba, I. and Zugal, S. and Soffer, P. and Hadar, I. and Reichert, M. and Pinggera, J. and Weber, B.},
   title={Understanding Declare models: strategies, pitfalls, empirical results},
-  journal={Software \& Systems Modeling},
-  pages={1--28},
-  year={2014},
+  journal={Software \& Systems Modeling, 2014, DOI: 10.1007/s10270-014-0435-z},
   publisher={Springer}
 }
 
 @article{reijers2011study,
-  author={Reijers, Hajo A and Mendling, Jan},
+  author={Reijers, H. A. and Mendling, J.},
   title={A study into the factors that influence the understandability of business process models},
   journal={IEEE Transactions on Systems, Man and Cybernetics, Part A: Systems and Humans},
-  volume={41},
-  number={3},
-  pages={449--462},
-  year={2011},
+  volume={41 (3) : 449--462, 2011},
   publisher={IEEE}
 }
 
 @article{recker2007does,
-  author={Recker, Jan C and Dreiling, Alexander},
+  author={Recker, J. C. and Dreiling, A.},
   title={Does it matter which process modelling language we teach or use? an experimental study on understanding process modelling languages without formal education},
     journal={18th Australasian Conference on Information Systems},
-  pages={356--366},
-  year={2007},
+  pages={356--366, 2007}
   publisher={University of Southern Queensland}
 }
 
 @inproceedings{gruhn2006adopting,
-  author={Gruhn, Volker and Laue, Ralf},
+  author={Gruhn, V. and Laue, R.},
   title={Adopting the cognitive complexity measure for business process models},
-  booktitle={5th IEEE International Conference on Cognitive Informatics, 2006.},
-  pages={236--241},
-  organization={IEEE}
+  booktitle={5th IEEE International Conference on Cognitive Informatics},
+  pages={236--241, 2006}
 }
 
 
 @article{mendling2010seven,
   title={Seven process modeling guidelines (7PMG)},
-  author={Mendling, Jan and Reijers, Hajo A and van der Aalst, Wil MP},
+  author={Mendling, J. and Reijers, H. A. and van der Aalst, W.M.P.},
   journal={Information and Software Technology},
-  volume={52},
-  number={2},
-  pages={127--136},
-  year={2010},
+  volume={52 (2):127--136, 2010},
   publisher={Elsevier}
 }
 
@@ -722,5 +690,32 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-stra
   publisher={Oldenbourg}
 }
 
+@inproceedings{sabrina734,
+       booktitle = {4th Int'l Workshop on Evolutionary Business Processes (EVL-BP'11), Proceedings EDOCW'11 Workshops},
+           month = {August},
+           title = {Semantically-Driven Workflow Generation using Declarative Modeling for Processes in Software Engineering},
+          author = {Grambow, G. and Oberhauser, R. and Reichert, M},
+       publisher = {IEEE Computer Society},
+            year = {2011},
+           pages = {164--173}
+}
 
-	
+@article{sabrina795,
+          volume = {4},
+          number = {3\&4},
+           title = {Contextual Generation of Declarative Workflows and their Application to Software Engineering Processes},
+          author = {Grambow, G. and Oberhauser, R. and Reichert, M.},
+            year = {2011},
+           pages = {158--179},
+         journal = {Int J on Advances in Intelligent Systems}
+}
+
+@article{sabrina758,
+          volume = {4},
+          number = {1\&2},
+           title = {Contextual Injection of Quality Measures into Software Engineering Processes},
+          author = {Grambow, G. and Oberhauser, R. and Reichert, M.},
+            year = {2011},
+           pages = {76--99},
+         journal = {Int'l Journal on Advances in Software}
+         }
