--- a/Masterarbeit 4/Tex/chapter9.tex
+++ b/Masterarbeit 4/Tex/chapter9.tex
@@ -7,7 +7,8 @@ In diesem Kapitel werden verwandte Arbeiten vorgestellt. Es werden Arbeiten zu d
 Es gibt schon einige Arbeiten, welche sich mit der Modellierung von Software Engineering Prozessmodellen in BPMN beschäftigen.
 \cite{Menhorn2014} beschäftigt sich mit der Analyse und der Überführung von Softwareentwicklungsprozessen in die Prozessmodellierungssprache BPMN und der Erweiterung von BPMN bei eventuellen Grenzen der Darstellbarkeit.\newline
 Weiterhin gibt es drei Arbeiten, bzw. Blogeinträge, welche sich mit der Modellierung von Scrum \cite{software}, Open UP \cite{brunner2007fallstudie} und \cite{Bregenzer2014} V-Modell XT in BPMN beschäftigen. Hier werden jeweils Teile der drei Software-Engineering Prozessmodelle analysiert und anschließend in BPMN modelliert.\newline
-Im Gegensatz zur vorliegenden Arbeit wird in den Arbeiten \cite{software}, \cite{brunner2007fallstudie}, \cite{Bregenzer2014} jeweils nur ein Softwareentwicklungsprozess modelliert und auch nur in der imperativen Prozessmodellierungssprache BPMN. In \cite{Menhorn2014} werden ebenfalls Teile von Scrum, Open UP und V-modell XT modelliert, jedoch nur in der imperativen Prozessmodellierungssprache BPMN. Der Fokus der Arbeit \cite{Menhorn2014} liegt auf der Erweiterung von BPMN um zusätzliche Notationselemente.\newline
+In \cite{sabrina734, sabrina758, sabrina795} wurden Softwareentwicklungsprozesse in einem System umgesetzt. Das Ziel war es, dass die Softwareentwicklungsprozesse dort komplett ausführbar sind. Die Softwareentwicklungsprozesse wurden imperativ umgesetzt. Eine deklarative Umsetzung erfolgte für dynamische Abläufe, welche im laufenden Tagesgeschehen ausserhalb der Modelle abgearbeitet werden.\newline
+ Im Gegensatz zur vorliegenden Arbeit wird in den Arbeiten \cite{software}, \cite{brunner2007fallstudie}, \cite{Bregenzer2014} jeweils nur ein Softwareentwicklungsprozess modelliert und auch nur in der imperativen Prozessmodellierungssprache BPMN. In \cite{Menhorn2014} werden ebenfalls Teile von Scrum, Open UP und V-modell XT modelliert, jedoch nur in der imperativen Prozessmodellierungssprache BPMN. Der Fokus der Arbeit \cite{Menhorn2014} liegt auf der Erweiterung von BPMN um zusätzliche Notationselemente.\newline
 In der vorliegenden Arbeit hingegen werden Teile von allen drei Softwareentwicklungsprozessmodellen in der imperativen Prozessmodellierungssprache BPMN und der deklarativen Prozessmodellierungssprache ConDec modelliert. Der Fokus der vorliegenden Arbeit liegt zudem auf der Beurteilung der Eignung zur Modellierung der beiden Prozessmodellierungssprachen und auf deren Vergleich und nicht auf der Modellierung der Softwareentwicklungsprozesse an sich oder der Erweiterung der Notationsumfänge der beiden Prozessmodellierungssprachen.\newline
 
 
